# cc-twi-wiki

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  nixpacks.toml  package-lock.json  package.json  pyproject.toml
config/: mcporter.json
data/: README.md  index.md
data/linux-coco/: 20240508-rfc-patch-v2-56-pcitsm-authenticate-devices-via-platform-tsm.md  20240508-x86sev-use-kernel-provided-svsm-calling-areas.md  20240508-x86tdx-convert-shared-memory-back-to-private-on-kexec.md  20240509-kvm-mmu-disable-fast-path-for-private-memslots.md  20240510-arm64-detect-if-in-a-realm-and-set-ripas-ram.md  20240510-kvm-unit-tests-patch-0033-support-for-arm-confidential-compu.md  20240510-svsm-devel-svsm-development-call-may-8th-2024.md  20240512-x86tdx-adjust-td-settings-on-boot.md  20240513-confidential-computing-call-may-10-rtmr-abi-tee-io.md  20240513-kvm-sev-fix-uninitialized-firmware-error-code.md  20240517-x86kvmtdx-save-rbp-in-tdx-module-call.md  20240522-svsm-development-call-may-22th-2024.md  20240528-x86tdx-add-kexec-support.md  20240528-x86tdx-generate-sigbus-on-userspace-mmio.md  20240604-call-for-registration-confidential-computing-microconference.md  20240604-cfp-confidential-computing-microconference-lpc-2024.md  20240610-arm64-support-for-arm-cca-in-kvm.md  20240611-svsm-development-call-june-12th-2024.md  20240612-svsm-development-call-june-12th-2024.md  20240630-pci-device-authentication.md  (+278 more)
llmwiki/: docker-compose.yml  llmwiki
scraper/: fetch.py  render.py  thread.py  topics.py
scripts/: fix_citations.py  redact_phones.py  scrape.py
(+753 files in other folders)
