[project]
name = "twi-wiki"
version = "0.1.0"
description = "Scrape the Confidential Computing TWI SIG mailing list and feed it into llmwiki."
requires-python = ">=3.11"
dependencies = [
    "curl_cffi>=0.7",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "markdownify>=0.11",
]

[tool.setuptools.packages.find]
include = ["scraper*"]
